--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /app_configurations/logging_setup/__pycache__
 /controller/user/__pycache__
 /logs
+/controller/authorization/__pycache__
+/controller/web_scrape_module/__pycache__
